# soup-discord

./: .gitignore  Cargo.toml  README.md  pyproject.toml
